updated title and desc

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Sample Title
-description: Sample Description
+title: Library Carpentry Sample Website
+description: Website designed and published at November 1, 2019 Library Carpentry workshop in Henrietta. 
